--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -27,6 +27,8 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
 
+    <protected-broadcast android:name="com.android.systemui.doze.pulse" />
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/device_settings_app_name"
@@ -41,6 +43,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+        
+        <service android:name=".doze.DozeService"
+                 android:permission="XiaomiDozeService"
+                 android:exported="true">
+        </service>
 
         <activity
             android:name=".dirac.DiracActivity"
@@ -74,6 +81,20 @@
             <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
             android:value="true" />
         </service>
+
+        <activity
+            android:name=".doze.DozeSettingsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SubSettingsBase"
+            android:label="@string/ambient_display_title">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.display" />
+            <meta-data android:name="com.android.settings.summary"
+             	       android:resource="@string/ambient_display_summary" />
+        </activity>
 
         <activity
             android:name=".thermal.ThermalActivity"
