--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -66,6 +66,10 @@ on init
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     chown system system /sys/devices/platform/soc/1d84000.ufshc/auto_hibern8
     chmod 0660 /sys/devices/platform/soc/1d84000.ufshc/auto_hibern8
+    
+    # Smart Charging
+    chmod 0666 /sys/class/qcom-battery/input_suspend
+    chown system system /sys/class/qcom-battery/input_suspend
 
 on early-fs
     start vold
